--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<h1>Hello, world! Ahmad was here 😎</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Ahmad's Cool Site</title>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #6a11cb, #2575fc);
+    color: white;
+    text-align: center;
+    padding: 100px 20px;
+  }
+  h1 {
+    font-size: 4rem;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+  }
+  p {
+    font-size: 1.5rem;
+    margin-bottom: 40px;
+    text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+  }
+  a.button {
+    display: inline-block;
+    padding: 15px 30px;
+    background: #ff4e50;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 30px;
+    box-shadow: 0 4px 15px rgba(255,78,80,0.6);
+    transition: background 0.3s ease;
+  }
+  a.button:hover {
+    background: #ff2e2f;
+  }
+</style>
+</head>
+<body>
+  <h1>Welcome to Ahmad's Cool Site!</h1>
+  <p>Just messing around with HTML & CSS. Keep it chill, keep it fun 😎</p>
+  <a href="https://github.com/linux-on-vm" target="_blank" class="button">Check my GitHub</a>
+</body>
+</html>
