--- a/index.html
+++ b/index.html
@@ -1,47 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Ahmad's Cool Site</title>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #6a11cb, #2575fc);
-    color: white;
-    text-align: center;
-    padding: 100px 20px;
-  }
-  h1 {
-    font-size: 4rem;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
-  }
-  p {
-    font-size: 1.5rem;
-    margin-bottom: 40px;
-    text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-  }
-  a.button {
-    display: inline-block;
-    padding: 15px 30px;
-    background: #ff4e50;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 30px;
-    box-shadow: 0 4px 15px rgba(255,78,80,0.6);
-    transition: background 0.3s ease;
-  }
-  a.button:hover {
-    background: #ff2e2f;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ahmad's Personal VM & Linux Projects">
+  <title>Ahmad's VM World</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+    }
+    body {
+      background-color: #0f172a;
+      color: #f1f5f9;
+      line-height: 1.6;
+      padding: 2rem;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #94a3b8;
+    }
+    .content {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+    .section h2 {
+      color: #38bdf8;
+      margin-bottom: 0.5rem;
+    }
+    .footer {
+      text-align: center;
+      margin-top: 3rem;
+      color: #94a3b8;
+      font-size: 0.9rem;
+    }
+    .footer a {
+      color: #38bdf8;
+      text-decoration: none;
+    }
+    .footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Ahmad's Cool Site!</h1>
-  <p>Just messing around with HTML & CSS. Keep it chill, keep it fun 😎</p>
-  <a href="https://github.com/linux-on-vm" target="_blank" class="button">Check my GitHub</a>
+  <header>
+    <h1>Welcome to Ahmad's VM World</h1>
+    <p>Linux lover • Ethical hacker • VM experiments</p>
+  </header>
+
+  <div class="content">
+    <div class="section">
+      <h2>About Me</h2>
+      <p>
+        I'm Ahmad, and I love breaking, testing, and learning from virtual environments. I explore different Linux distros,
+        network security concepts, and virtualization setups to build my skills.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>What I Do</h2>
+      <ul>
+        <li>🔧 Set up custom Linux virtual machines</li>
+        <li>🔍 Test network security with tools like Nmap & Wireshark</li>
+        <li>📦 Experiment with Kali Linux, Ubuntu, and Arch</li>
+        <li>📁 Host projects using GitHub Pages</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Recent Projects</h2>
+      <ul>
+        <li>➡️ <strong>"Internet Hack" VM:</strong> Tested network scanning with Nmap and arp-scan.</li>
+        <li>➡️ <strong>WiFi Attack Sim:</strong> Practiced deauth attacks and WPA cracking (on my own network, ethically!).</li>
+        <li>➡️ <strong>Ubuntu Server Build:</strong> Created a basic web server using Apache and HTML.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer">
+    <p>Follow me on Instagram: <a href="https://instagram.com/ahmadbagdaddy" target="_blank">@ahmadbagdaddy</a></p>
+    <p>© 2025 Ahmad | Powered by GitHub Pages</p>
+  </div>
 </body>
 </html>
