--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ahmad Bagdaddy | Linux & VM Lab</title>
+  <title>Ahmad Bagdaddy | dont forget to support me on insta this took so long</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -127,7 +127,7 @@
     <ul>
       <li>🖥️ Set up Kali and Ubuntu in VMware and VirtualBox.</li>
       <li>🔍 Used Nmap to scan LAN devices and study responses.</li>
-      <li>📡 Practiced basic network experiments safely inside my VM lab.</li>
+      <li>📡 Practiced basic network experiments and failed...</li>
       <li>🧰 Configured simple web servers with Apache on Ubuntu.</li>
     </ul>
   </div>
